1.4.3
- Added sourcecode to the closure analysis.
- Change: Removed the code generation for the SplObjectStorage.
  Generating code for the SplObjectStorage is right now too
  complicated.
- Change: Removed the unnecessary stuff from the source generation.
  Stuff like '$kresult =' is now gone.
- Cleanup: Introduced "models", to get the values to the view.
- Cleanup: Removed all closures and use real classes.
- Cleanup: Moved (nearly) all string escaping to the "model".
  Exception to this is the read sourcecode, which we are handling
  a little bit differently.
- Bugfix: Code generation was not working when krexx was called via
  'Krexx::'.
- Bugfix: Wrong line number in the fatal error handler.

1.4.2
- Added analysis metadata to the file output.
- Change: Restructured the configuration options. The sorting does now
  make more sense than before.
- Change: The logging options can never be changed on the frontend.
- Change: The debug methods can never be changed on the frontend.
- Bufix / Change: Removed the whole dual-output mess.
- Change: When the destination is set to 'file' via config file, this
  value can not be overwritten with local cookie settings.
- Change: Unclunked the Smokey-Grey skin.
- Change: Adopted PSR-2
- Bugfix: No helptext displayed for readonly cookie config.
- Bugfix: The Hans skin renders the config option name twice.
- Bugfix: When setting the logfiles to '10', kreXX will now keep 10
  files, and not 9.
- Bugfix: The debug output might jump around, in some special css
  environments.
- Bufix: Proper handling of broken html output from the hosting CMS.

1.4.1
- Added class constants analysis.
- Added the possibility to remove message keys from the message class
- Change: Search is now case-insensitive. This should make searching
  much more easy.
- Change: Output destination can not be changed anymore via the cookie
  editor by default. This should prevent people from locking themselves
  out.