@@ -473,16 +473,18 @@ $fontLight: lighter 10px tahoma, verdana;
     .kpreview {
       padding: 0;
       margin-bottom: 5px;
-      background-color: $white;
       .kpre {
         font-style: normal;
         overflow: auto;
         color: $greyDark;
         font: $fontBold;
         white-space: pre;
+        background-color: $white;
       }
       .source {
-        padding: 0 20px;
+        padding: 1px 20px;
+        background-color: $whiteDark;
+        margin: 2px 0;
       }
       .klineno {
         font-weight: normal;
