@@ -1,5 +1,6 @@
 1.4.3
 - Added sourcecode to the closure analysis.
+- Prettified the sourcecode display in the Smoky-Grey skin.
 - Change: Removed the code generation for the SplObjectStorage.
   Generating code for the SplObjectStorage is right now too
   complicated.
